made changes to the video-detail page set the banner Ad to overlap to prevent content from jumping when the ad loads/shows

--- a/src/pages/video-detail/video-detail.scss
+++ b/src/pages/video-detail/video-detail.scss
@@ -6,7 +6,7 @@ page-video-detail {
         width: 100%;
         background-position: center center;
         background-size: cover;
-        height: 250px;
+        height: 36%;
         display: flex;
     }
 
@@ -17,9 +17,11 @@ page-video-detail {
     }
 
     .next-prev {
-        padding-right: 50px;
-        padding-left:50px;
-        margin-bottom: 50px;
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        margin: 0 auto;
+        bottom: 100px;
     }
 
     .play-ico {
@@ -30,5 +32,20 @@ page-video-detail {
 
     .center {
         text-align: center;
+    }
+
+    .share-btn {
+        bottom: 52px;
+    }
+
+    .watched-icon{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: medium;
+        text-align: left;
+        width: 100%;
+        color: #D32F2F;
+        text-align: right;
     }
 }
